[gd_scene load_steps=3 format=3 uid="uid://bidajcq4w5jw"]

[ext_resource type="Script" path="res://src/ui/screens/meta_upgrade_screen.gd" id="1"]

[sub_resource type="Theme" id="Theme_1"]

[node name="MetaUpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme_1")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "永久升級"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "金幣: 0"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "返回主選單"